<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_courses"
        android:icon="@drawable/ic_course"
        android:title="@string/nav_courses" />
    <item
        android:id="@+id/nav_tasks"
        android:icon="@drawable/ic_task"
        android:title="@string/nav_tasks" />
    <item
        android:id="@+id/nav_plan"
        android:icon="@drawable/ic_plan"
        android:title="@string/nav_plan" />
    <item
        android:id="@+id/nav_statistics"
        android:icon="@drawable/ic_statistics"
        android:title="@string/nav_statistics" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
